Fix: Background and foreground colors do not have a sufficient contrast ratio.

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -132,7 +132,7 @@ Date Created: July 16, 2018
 }
 
 .typo-color-c {
-  color: #69798d;
+  color: #111; /*#69798d;*/
 }
 
 /* Classes for background-color */
